修复了下玩家死亡后不能拾取的问题